--- a/public/frontend/css/style_1.css
+++ b/public/frontend/css/style_1.css
@@ -10,7 +10,7 @@ a:hover {
     color: #fff !important;
 }
 .treding_btn {
-    background: #f5bc04;
+    background: #2596be;
     color: #fff;
     margin: 0 10px;
     display: inline-block;
@@ -18,7 +18,7 @@ a:hover {
 }
 .treding_btn:hover,
 .treding_btn:focus {
-    background: #f5bc04;
+    background: #2596be;
     color: #fff;
     margin: 0 10px;
     display: inline-block;
@@ -34,7 +34,7 @@ a:hover {
     clip-path: polygon(0 1%, 100% 0, 0 100%, 0% 100%);
     height: 20px;
     width: 20px;
-    background: #f5bc04;
+    background: #2596be;
     position: absolute;
     left: 9px;
 }
@@ -126,7 +126,7 @@ a:hover {
 }
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-    background: #f5bc04 !important;
+    background: #2596be !important;
     color: #fff !important;
     padding-top: 12px !important;
     padding-bottom: 15px !important;
@@ -158,7 +158,7 @@ a:hover {
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
-.fh5co_suceefh5co_height_position_absolute {
+/* .fh5co_suceefh5co_height_position_absolute {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -182,7 +182,7 @@ a:hover {
     );
     z-index: 5;
     top: 0;
-}
+} */
 .fh5co_suceefh5co_height_position_absolute_font {
     position: absolute;
     width: 100%;
@@ -373,7 +373,7 @@ a:hover {
     transition: all all 0.5s ease;
 }
 .fh5co_news_img > img {
-    height: 260px;
+    height: 100%;
     min-width: 100%;
 }
 .c_b {
